@@ -5,14 +5,14 @@
   <artifactId>pom</artifactId>
   <packaging>pom</packaging>
   <name>Identity Mixer</name>
-  <version>3.1.0</version>
+  <version>3.1.3</version>
   <url>http://www.zurich.ibm.com/security/idemix/</url>
 
   <properties>
     <abc4TrustVersion>1.1.36</abc4TrustVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <skipTests>true</skipTests>
   </properties>
 
@@ -116,18 +116,13 @@
         </exclusions>
       </dependency>
 
+
+
 <!--      <dependency>-->
-<!--        <groupId>com.sun.xml.security</groupId>-->
-<!--        <artifactId>xml-security-impl</artifactId>-->
-<!--        <version>1.0</version>-->
+<!--        <groupId>xml-security</groupId>-->
+<!--        <artifactId>xmlsec</artifactId>-->
+<!--        <version>1.3.0</version>-->
 <!--      </dependency>-->
-
-
-      <dependency>
-        <groupId>xml-security</groupId>
-        <artifactId>xmlsec</artifactId>
-        <version>1.3.0</version>
-      </dependency>
 
 
       <!--      <dependency>-->
@@ -149,6 +144,7 @@
           </exclusion>
         </exclusions>
       </dependency>
+
       <!-- Testing framework -->
       <dependency>
         <groupId>junit</groupId>
@@ -182,46 +178,6 @@
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>1.7</version>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
-          <configuration>
-            <encoding>UTF-8</encoding>
-            <source>11</source>
-            <target>11</target>
-          </configuration>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-eclipse-plugin</artifactId>
-          <version>2.8</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.12.3</version>
-          <configuration>
-            <argLine>-DskipTests</argLine>
-            <argLine>-Djava.util.logging.config.file=java.logging.test</argLine>
-            <includes>
-              <include>**/_AllTests.java</include>
-            </includes>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>2.2</version>
-          <executions>
-            <execution>
-              <goals>
-                <goal>test-jar</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -238,12 +194,56 @@
           <version>3.8.0</version>
           <configuration>
             <compilerArgs>
-<!--              <arg>-Xlint:all</arg>-->
-
+              <!--              <arg>-Xlint:all</arg>-->
             </compilerArgs>
-            <release>11</release>
+            <encoding>UTF-8</encoding>
+            <source>${maven.compiler.source}</source>
+            <target>${maven.compiler.target}</target>
+            <release>${maven.compiler.source}</release>
+
           </configuration>
         </plugin>
+
+
+
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-eclipse-plugin</artifactId>
+          <version>2.8</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.12.3</version>
+          <configuration>
+            <!-- This is needed to work around the Serialization issues -->
+            <!-- To be removed after migration to JSON-LD              -->
+            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+
+            <argLine>-DskipTests</argLine>
+            <argLine>-Djava.util.logging.config.file=java.logging.test</argLine>
+            <includes>
+              <include>**/_AllTests.java</include>
+            </includes>
+
+
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.2</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>test-jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
 
       </plugins>
     </pluginManagement>
